# bigbox

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile
.cargo/: config.toml
crates/content/: Cargo.toml
crates/content/data/: affixes.ron  attachments.ron  bases.ron  enemies.ron
crates/content/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: affix.rs  aggregate.rs  attach.rs  combat.rs  enemy.rs  item.rs  lib.rs  progression.rs  roll.rs  stats.rs  upgrade.rs
crates/game/: Cargo.toml
crates/game/assets/characters/kennys/: CREDITS.txt  character-a.glb  character-b.glb  character-c.glb  character-d.glb  character-e.glb  character-f.glb  character-g.glb  character-h.glb  character-i.glb  character-j.glb  character-k.glb  character-l.glb  character-m.glb  character-n.glb  character-o.glb  character-p.glb  character-q.glb  character-r.glb
crates/game/assets/fonts/: OFL.txt
crates/game/src/: character.rs  debug.rs  hud.rs  input.rs  lib.rs  main.rs  pad.rs  render.rs  scene.rs  ui.rs
crates/procgen/: Cargo.toml
crates/procgen-viz/: Cargo.toml
crates/procgen-viz/src/: main.rs
crates/procgen/src/: flow.rs  lib.rs  spawn.rs
crates/procgen/tests/: snapshot.rs
crates/procgen/tests/snapshots/: snapshot__bsp_seed_42_default_params.snap  snapshot__bsp_seed_7_small_map.snap
crates/sim/: Cargo.toml
crates/sim/src/: main.rs  summary.rs
crates/sim/tests/: snapshot.rs
crates/sim/tests/snapshots/: snapshot__csv_seed7_ilvl40_first_10_kills.snap  snapshot__summary_seed42_ilvl20_2k_kills.snap  snapshot__summary_seed42_ilvl60_2k_kills.snap
web/: README.md  index.html  quad-gamepad.js  quad-url.js
