[workspace]
resolver = "3"
members = ["crates/core", "crates/content", "crates/sim"]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Lukáš Hellmann"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
thiserror = "1"
ron = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
