[workspace]
resolver = "3"
members = ["crates/core", "crates/content", "crates/game", "crates/procgen", "crates/procgen-viz", "crates/sim"]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Lukáš Hellmann"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
thiserror = "1"
ron = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
insta = "1"
# Bevy is the new engine (migration from macroquad in progress — see
# .attic/migration/plan.md). macroquad is kept only until the game crate's
# render/input/UI/debug layers finish porting, then removed.
#
# `default-features = false` + explicit list, dropping `bevy_audio`: it links
# ALSA (via cpal/rodio), which collides with macroquad's `quad-alsa-sys` while
# both crates coexist. Audio is a deferred scope item anyway (CLAUDE.md open
# question #4) — re-add `bevy_audio` once macroquad is gone.
bevy = { version = "0.19", default-features = false, features = [
    "std",
    "multi_threaded",
    # `LogPlugin` (tracing subscriber) is gated on this in `DefaultPlugins`.
    # Without it Bevy's own warnings/errors are swallowed and `info!`/`warn!`
    # link to nothing — so it's on even though we use `default-features = false`.
    "bevy_log",
    "bevy_asset",
    "bevy_state",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_winit",
    "bevy_ui",
    # UI layout/interaction (`bevy_ui`) and UI *rendering* are split in 0.19 —
    # without `bevy_ui_render` the HUD lays out but nothing draws it.
    "bevy_ui_render",
    "bevy_text",
    "default_font",
    "bevy_gizmos",
    "bevy_gilrs",
    "png",
    "x11",
    "wayland",
    "tonemapping_luts",
    "zstd_rust",
] }
macroquad = "0.4"

# Bevy cold builds are heavy; compile all dependencies optimized even in dev so
# the debug build stays playable, while keeping our own crates fast to rebuild.
# (Standard Bevy dev-profile recommendation.)
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
