[workspace]
resolver = "3"
members = ["crates/core", "crates/content", "crates/game", "crates/procgen", "crates/procgen-viz", "crates/sim"]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Lukáš Hellmann"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
thiserror = "1"
ron = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
insta = "1"
# Bevy is the engine. The macroquad → Bevy migration is complete (see
# .attic/migration/plan.md); no macroquad remains.
#
# `default-features = false` + explicit list, dropping `bevy_audio`. Audio is a
# deferred scope item (CLAUDE.md open question #4); re-add `bevy_audio` when it
# lands. (It was originally dropped for an ALSA `links` clash with macroquad —
# that constraint is gone now, but audio is still out of scope for the migration.)
bevy = { version = "0.19", default-features = false, features = [
    "std",
    "multi_threaded",
    # `LogPlugin` (tracing subscriber) is gated on this in `DefaultPlugins`.
    # Without it Bevy's own warnings/errors are swallowed and `info!`/`warn!`
    # link to nothing — so it's on even though we use `default-features = false`.
    "bevy_log",
    "bevy_asset",
    "bevy_state",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    # GLTF models load as `WorldAsset`s spawned via `WorldAssetRoot` (Bevy 0.19's
    # scene system) — this feature provides that type + its spawner plugin.
    "bevy_world_serialization",
    # GLTF node/skeletal animation. `gltf_animation` is the load-bearing one: it
    # pulls `bevy_animation` *and* flips `bevy_gltf`'s animation support on, so the
    # loader actually emits `Animation{n}` clip assets from the glb.
    "gltf_animation",
    # Dev asset hot-reload (filesystem watcher). Lets model/texture edits refresh
    # in a running game; harmless in release (we just don't enable watching).
    "file_watcher",
    "bevy_winit",
    "bevy_ui",
    # UI layout/interaction (`bevy_ui`) and UI *rendering* are split in 0.19 —
    # without `bevy_ui_render` the HUD lays out but nothing draws it.
    "bevy_ui_render",
    "bevy_text",
    "default_font",
    "bevy_gizmos",
    # Like bevy_ui/bevy_ui_render, gizmo *rendering* is a separate feature —
    # without it `Gizmos` buffers accumulate but nothing draws (the aim line +
    # flow-field viz were invisible until this was added).
    "bevy_gizmos_render",
    "bevy_gilrs",
    "png",
    "x11",
    "wayland",
    "tonemapping_luts",
    "zstd_rust",
] }

# Bevy cold builds are heavy; compile all dependencies optimized even in dev so
# the debug build stays playable, while keeping our own crates fast to rebuild.
# (Standard Bevy dev-profile recommendation.)
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
