[package]
name = "bigbox-content"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RON content (affixes, base items, enemies, drop tables) and loaders for bigbox."

[lib]
name = "bb_content"

[dependencies]
bigbox-core = { path = "../core" }
serde = { workspace = true }
ron = { workspace = true }
thiserror = { workspace = true }
