[package]
name = "bigbox-game"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Runtime layer for bigbox — macroquad window, input, render loop."

[lib]
name = "bb_game"

[[bin]]
name = "bb-game"
path = "src/main.rs"

[dependencies]
bigbox-core = { path = "../core" }
bigbox-content = { path = "../content" }
bigbox-procgen = { path = "../procgen" }
rand = { workspace = true }
bevy = { workspace = true }
# Kept until the render/input/UI/debug layers finish porting to Bevy, then
# removed (see .attic/migration/plan.md).
macroquad = { workspace = true }
# Debug-only immediate-mode tuning panel + RON tunable export/import. All
# optional so release builds don't compile (or ship) any of it. Enable with
# `--features debug`.
egui-macroquad = { version = "0.17", optional = true }
serde = { workspace = true, optional = true }
ron = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[features]
# Compiles the local-dev tooling: the in-game tuning overlay (egui), tunable
# RON export/import, and clap CLI arg parsing. Off by default → none of it
# (nor egui/serde/ron/clap) lands in a `--release` build.
debug = ["dep:egui-macroquad", "dep:serde", "dep:ron", "dep:clap"]
# Dev-only: dynamic-link Bevy for much faster incremental link times. Never
# enable for a release/distribution build. Use: `cargo run --features fast-dev`.
fast-dev = ["bevy/dynamic_linking"]
# Dev-only: `BB_SHOT=<path>` captures one screenshot of the primary window after
# the scene populates, then exits. For headless render validation (CI, agents).
# `png` is already in the workspace bevy features, so this pulls no new deps.
screenshot = []
