[package]
name = "bigbox-game"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Runtime layer for bigbox — Bevy window, input, render loop."

[lib]
name = "bb_game"

[[bin]]
name = "bb-game"
path = "src/main.rs"

[dependencies]
bigbox-core = { path = "../core" }
bigbox-content = { path = "../content" }
bigbox-procgen = { path = "../procgen" }
rand = { workspace = true }
bevy = { workspace = true }
# Debug-only immediate-mode tuning panel (bevy_egui host) + RON tunable
# export/import + clap CLI. All optional so a release build compiles (and ships)
# none of it. Enable with `--features debug`.
bevy_egui = { version = "0.41", optional = true }
serde = { workspace = true, optional = true }
ron = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[features]
# Compiles the local-dev tooling: the in-game tuning overlay (bevy_egui),
# tunable RON export/import, and clap CLI arg parsing. Off by default → none of
# it (nor bevy_egui/serde/ron/clap) lands in a release build.
debug = ["dep:bevy_egui", "dep:serde", "dep:ron", "dep:clap"]
# Dev-only: dynamic-link Bevy for much faster incremental link times. Never
# enable for a release/distribution build. Use: `cargo run --features fast-dev`.
fast-dev = ["bevy/dynamic_linking"]
# Dev-only: `BB_SHOT=<path>` captures one screenshot of the primary window after
# the scene populates, then exits. For headless render validation (CI, agents).
# `png` is already in the workspace bevy features, so this pulls no new deps.
screenshot = []
