[package]
name = "bigbox-procgen-viz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI visualizer for the procgen output (map + flow field + spawn placement)."

[[bin]]
name = "bb-procgen-viz"
path = "src/main.rs"

[dependencies]
bigbox-procgen = { path = "../procgen" }
rand = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
