[package]
name = "bigbox-procgen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Procedural level generation for bigbox. Deterministic from seed; renderer-agnostic."

[lib]
name = "bb_procgen"

[dependencies]
serde = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
