[package]
name = "bigbox-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI loot simulator — dumps M drops at monster-level N from seed S to CSV on stdout."

[[bin]]
name = "bb-sim"
path = "src/main.rs"

[dependencies]
bigbox-core = { path = "../core" }
bigbox-content = { path = "../content" }
rand = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
